[gd_scene load_steps=2 format=3 uid="uid://b5eoeqen8j377"]

[ext_resource type="Script" path="res://prog122c.gd" id="1_1vlxc"]

[node name="prog122c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vlxc")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 402.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 502.0
offset_right = 244.0
offset_bottom = 644.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 504.0
offset_right = 668.0
offset_bottom = 646.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 906.0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 654.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
